bootstrap-rag/shared-rag-llm/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ic-shared-rag-llm
  labels:
    app: ic-shared-rag-llm
    argocd.argoproj.io/managed-by: openshift-gitops
  annotations:
    openshift.io/display-name: "Shared LLM"
    argocd.argoproj.io/sync-wave: "0"
