bootstrap-rag/shared-rag-llm/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: llm
  namespace: ic-shared-rag-llm
  labels:
    app: llm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  clusterIP: None
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: llm
