bootstrap-rag/shared-rag-llm/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: llm-route
  namespace: ic-shared-rag-llm
  labels:
    app: llm
spec:
  to:
    kind: Service
    name: llm
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
